# fastapi-docker-railway-atlantica

./: .gitignore  Dockerfile.workshop  LICENSE.md  README.md  docker-compose.workshop.yaml  pyproject.toml  requirements.txt  seed.sql
event_manager/api/: main.py
event_manager/api/dependency_injection/: common.py  event.py
event_manager/api/routers/: event.py  healthcheck.py
event_manager/api/ui/: event.py  healtcheck.py
event_manager/config/: environment.py
event_manager/core/event/adapters/: postgres_event_decoder.py  postgres_event_repository.py
event_manager/core/event/models/: errors.py  event.py  protocols.py  value_objects.py
event_manager/core/event/services/: event_fetcher_service.py  event_searcher_service.py
event_manager/shared/core/: identifiers.py
event_manager/shared/core/types/: datetime_value.py  integer_value.py  string_value.py
event_manager/shared/infra/: identifier_providers.py
event_manager/shared/utils/: environment_handler.py
